# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  myfile.json  pyproject.toml
gendiff/scripts/: gendiff.py  generate_difference.py  hello.py  parser.py  render_json.py  render_plain.py
tests/: .coverage  test_find_sum.py  test_gendiff.py
tests/fixtures/: after_nested.json  before_nested.json  data_gendifftest.py  dict_for_gendifftest.py
