[tool.poetry]
name = "gendiff_python"
version = "0.1.1"
description = "Shows difference between two config files"
authors = ["Ana-ana"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

