[tool.poetry]
name = "gendiff_python"
version = "0.1.2"
description = "Shows difference between two config files"
authors = ["Ana-ana"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

